fixed overflowing text

--- a/public/main.css
+++ b/public/main.css
@@ -953,6 +953,7 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(18rem,1fr));
     place-items: center;
     gap:.5rem;
+    margin-top: 2rem;
 }
 .gallery-item{
     width: 18rem;
